BLF: Fix problem with drawing with fonts with multiple size.

Fix T54838 : Text display glitch w/ fonts at different sizes.

This was cause by the cache not being flushed when changing font texture.